<resources>
    <string name="app_name">MVVM Lab</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="create_contact">Create Contact</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
</resources>
