<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Kyle Dahn" />

    <TextView
        android:id="@+id/tv_phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/phone_number"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_phone_number_value"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number_label"
        app:layout_constraintStart_toStartOf="@id/tv_phone_number_label"
        tools:text="1 (651) 763-2972" />

    <TextView
        android:id="@+id/tv_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/address"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number_value" />

    <TextView
        android:id="@+id/tv_address_value"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_address_label"
        app:layout_constraintStart_toStartOf="@id/tv_address_label"
        tools:text="4375 St Stephen St, Mounds View, MN 55112" />

    <TextView
        android:id="@+id/tv_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address_value" />

    <TextView
        android:id="@+id/tv_email_value"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email_label"
        app:layout_constraintStart_toStartOf="@id/tv_email_label"
        tools:text="kdahn@bushelpowered.com" />

</androidx.constraintlayout.widget.ConstraintLayout>